<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:id="@+id/activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:elevation="@dimen/toolbar_elevation"
        android:background="@color/ColorPrimary">
        <TextView
            android:id="@+id/customTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/register_label"
            android:textSize="@dimen/textsize25sp"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.hooper.registrationscreen.circleview.CircularImageView
                android:id="@+id/profilePictureCircleView"
                android:layout_width="@dimen/activity_register_imageview_width"
                android:layout_height="@dimen/activity_register_imageview_height"
                android:layout_marginTop="@dimen/activity_register_imageview_margin_top"
                android:src="@drawable/ic_launcher"
                app:siBorderWidth="@dimen/activity_register_imageview_border_width"
                app:siBorderAlpha="0.5"
                app:siBorderColor="@color/bordercolor"
                android:alpha="1"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_layout_height"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_register_layout_margin_top"
                android:layout_marginLeft="@dimen/activity_register_layout_margin_left"
                android:layout_marginRight="@dimen/activity_register_layout_margin_right"
                android:id="@+id/profileNameLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/nameLabel"
                    android:layout_marginRight="@dimen/activity_register_namelabel_margin_right"
                    android:layout_marginTop="@dimen/activity_register_namelabel_margin_left"
                    android:text="@string/activity_register_namelabel"
                    android:textSize="@dimen/textsize17sp"
                    android:layout_gravity="bottom" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_marginLeft="@dimen/activity_register_edittext_profilename_margin_left"
                    android:background="@drawable/img_bg_edit_text"
                    android:id="@+id/profileName"
                    android:gravity="center"
                    android:hint="@string/activity_register_profilename_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_layout_height"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_register_layout_margin_left"
                android:layout_marginRight="@dimen/activity_register_layout_margin_right"
                android:layout_marginTop="@dimen/activity_register_layout_margin_top"
                android:id="@+id/phoneNumberLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/textView4"
                    android:layout_marginRight="@dimen/activity_register_label_mobile_margin_right"
                    android:layout_marginTop="@dimen/activity_register_label_mobile_margin_top"
                    android:text="@string/activity_register_mobile_label"
                    android:textSize="@dimen/textsize17sp"
                    android:layout_gravity="bottom" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/mobileNumber"
                    android:background="@drawable/img_bg_edit_text"
                    android:layout_marginLeft="@dimen/activity_register_edittext_mobile_margin_left"
                    android:maxLength="@integer/activity_register_edittext_mobile_maxlength"
                    android:gravity="center"
                    android:inputType="number"
                    android:hint="Phone Number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_layout_height"
                android:id="@+id/LinearLayout3"
                android:layout_marginLeft="@dimen/activity_register_layout_margin_left"
                android:layout_marginRight="@dimen/activity_register_layout_margin_right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/designationLabel"
                    android:layout_marginTop="@dimen/activity_register_label_designation_margin_top"
                    android:layout_marginRight="@dimen/activity_register_label_designation_margin_right"
                    android:text="@string/activity_register_label_designation"
                    android:textSize="@dimen/textsize17sp"/>

                <Spinner
                    android:id="@+id/designationSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/activity_register_spinner_margin_left"
                    android:popupBackground="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_joiningdate_layout_height"
                android:id="@+id/LinearLayout4"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_register_layout_margin_left"
                android:layout_marginRight="@dimen/activity_register_layout_margin_right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/joiningDateLabel"
                    android:text="@string/activity_register_label_joiningdate"
                    android:layout_marginRight="@dimen/activity_register_label_joiningdate_margin_right"
                    android:textSize="17dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/dateTextView"
                    android:layout_marginLeft="@dimen/activity_register_textview_joiningdate_margin_left"
                    android:textSize="@dimen/textsize17sp"/>
            </LinearLayout>

            <DatePicker
                android:id="@+id/joiningDatePicker"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_datepicker_height"
                android:background="@drawable/img_bg_edit_text"
                android:datePickerMode="spinner"
                android:minDate="@string/activity_register_datepicker_mindate"
                android:maxDate="@string/activity_register_datepicker_maxdate"
                android:layout_marginLeft="@dimen/activity_register_layout_margin_left"
                android:layout_marginRight="@dimen/activity_register_layout_margin_right"
                android:calendarViewShown="false" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/activity_register_buttonLayout_height"
                android:orientation="horizontal"
                android:id="@+id/buttonLayout"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/activity_register_buttonLayout_margin_left"
                android:layout_marginRight="@dimen/activity_register_buttonLayout_margin_right"
                android:layout_marginBottom="@dimen/activity_register_buttonLayout_margin_bottom"
                android:layout_marginTop="@dimen/activity_register_buttonLayout_margin_top"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/button_style"
                    android:textColor="@color/white"
                    android:layout_marginRight="@dimen/activity_register_button_add_margin_right"
                    android:id="@+id/addMember"
                    android:text="Add"
                    android:layout_weight="0.1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/button_style"
                    android:layout_marginLeft="@dimen/activity_register_button_cancel_margin_left"
                    android:id="@+id/cancelRegister"
                    android:textColor="@color/white"
                    android:text="Back"
                    android:layout_weight="0.1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
